project/harbor_kustomize/harbor/overlays/patches/delete-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/proxy-body-size: '0'
    ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
  labels:
    app: harbor
    argocd.argoproj.io/instance: aws-platform-prod-observability-001-harbor
    chart: harbor
    heritage: Helm
    release: harbor
  name: harbor-ingress
  #namespace: harbor
spec:
  $patch: delete
  tls:
  - hosts:
    - argocd.example.com
    secretName: harbor-ingress
